--- a/betsie/index.html
+++ b/betsie/index.html
@@ -309,10 +309,10 @@
     <!-- Footer Links --><footer>
         <h3>Site Links</h3>
         
-        <a href="betsie_about_us.html">About Us</a>
-        <a href="betsie_privacy_policy.html">Privacy Policy</a>
-        <a href="betsie_terms_of_service.html">Terms of Service</a>
-        <a href="betsie_community_guidelines.html">Community Guidelines</a>
+        <a href="about_us.html">About Us</a>
+        <a href="privacy_policy.html">Privacy Policy</a>
+        <a href="terms_of_service.html">Terms of Service</a>
+        <a href="community_guidelines.html">Community Guidelines</a>
 
         <!-- Copyright Text --><p style="font-size: 0.8em; color: #666; margin-top: 20px; padding-top: 10px;">
             Betsie is a Trademark of Squeaky Cheese, LLC - Site &copy; 2025 Squeaky Cheese, LLC
