--- a/betsie/index.html
+++ b/betsie/index.html
@@ -359,12 +359,12 @@
             <h1>Call The Chaos.<br />Get The Receipts.<br /><strong>Claim Your Main Character Glory.</strong></h1>
             
             <!-- UPDATED COPY: Focusing on the chat dynamic and higher social stakes -->
-            <p>The group chat is basically a crystal ball, but who keeps score?</p>
-            <p>Betsie is where you turn those "I told you so!" moments into <u>permanent, indisputable receipts</u>.</p>
+            <!-- <p>The group chat is basically a crystal ball, but who keeps score?</p> -->
+            <p>Betsie&trade; is where you turn those "I told you so!" moments into <u>permanent, indisputable receipts</u>.</p>
             <p>Track your predictive genius on a <u>real-time scoreboard</u> against your whole circle.</p>
             <p>If you have the superior insight, <u>you deserve the glory</u>.</p>
 
-            <p>Loser buys the espresso martini? Winner decides the group vacation spot?</p>
+            <!-- <p>Loser buys the espresso martini? Winner decides the group vacation spot?</p> -->
             <p>It's time to settle the score with zero chill.</p>
 
             <p>
