--- a/betsie/index.html
+++ b/betsie/index.html
@@ -144,7 +144,7 @@
             height: auto;
             display: block;
             border-radius: 16px; 
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15); 
+            //box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15); 
         }
 
         /* Main CTA Button */
@@ -400,7 +400,7 @@
 
         <div id="hero-image">
             <!-- Using the uploaded screenshot asset -->
-            <img src="iPhone - Portrait - 1290 x 2796.png" alt="Betsie App Screenshot on Phone" onerror="this.onerror=null; this.src='https://placehold.co/300x450/002cfc/ffffff?text=App+Screenshot';">
+            <img src="images/hero-image.png" alt="Betsie App Screenshot on Phone" onerror="this.onerror=null; this.src='https://placehold.co/300x450/002cfc/ffffff?text=App+Screenshot';">
         </div>
 
     </div>
