--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <div class="link-item">
             <a href="https://www.amazon.com/gp/video/detail/B08SPXY3Y8/ref=atv_dp_share_cu_r" target="_blank" class="link-btn">
-                Co-Creator: Learn to Ballroom, Latin and Swing
+                Co-Creator: Learn Ballroom, Latin &amp; Swing
             </a>
             <p class="link-description">If you want to learn to ballroom dance on-line</p>
         </div>
