--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
     
     <div class="profile-text-info">
-        <h1 class="profile-username">@porfitron</h1>
+        <h1 class="profile-username">Porfirio José Landeros</h1>
         <p class="profile-title">Product Marketing Executive</p>
     </div>
 
