--- a/index.html
+++ b/index.html
@@ -272,8 +272,21 @@
             font-weight: normal;
             font-size: 16px;
             color: #999;
-            margin-bottom: 20px;
+            margin-bottom: 10px; /* Reduced margin to bring "Previously at" closer */
         }
+        
+        /* NEW STYLING FOR FORMER EMPLOYERS LIST */
+        .modal-alumni {
+            font-size: 13px;
+            color: #b0b0b0; /* Lighter color to make it subtle */
+            margin-bottom: 20px; 
+            line-height: 1.4;
+            font-weight: 500;
+            /* Ensures it doesn't get standard paragraph styling */
+            margin-top: 0; 
+            padding: 0;
+        }
+        /* END NEW STYLING */
 
         .modal-content p {
             margin-bottom: 15px;
@@ -375,9 +388,11 @@
             <span class="close-btn">&times;</span>
             <h2>Porfirio José Landeros</h2>
             <h3>Product Marketing Executive</h3>
+            
+            <p class="modal-alumni">Previously at: 23andMe, Meta/Instagram, Mozilla/Firefox, BitTorrent/uTorrent, DivX/Tivo</p>
             <p>Porfirio is a seasoned Product Marketing Executive with a track record of driving growth and innovation in streaming media and digital content spaces. He is passionate about bridging the gap between product development and market success, leveraging data-driven strategies to connect with audiences.</p>
-            <p>When not immersed in product strategy, Porfirio volunteers as a Disaster Service Worker with the NERT/SFFD. He is a retired, nationally ranked ballroom dance champion, who now enjoys long walks with his wife and two dogs, and gravel cycling Bay Area trails.</p>
-            <p>He is also available for Advisory and Consulting roles in areas he holds dear, including health &amp; wellness, streaming media, and content delivery platforms (including AR/VR and wearables).</p>
+            <p>Outside of work, Porfirio is a Disaster Service Worker Volunteer with the NERT/SFFD. He is a retired, nationally ranked ballroom dance champion, who now enjoys beach time with family, and gravel cycling Bay Area trails.</p>
+            <p>He is currently available for Advisory and Consulting roles in areas he holds dear, including health &amp; wellness, streaming media, and new innovations in consumer experiences (including AR/VR and wearables).</p>
         </div>
     </div>
 
