--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <p class="modal-alumni">Previously at: 23andMe, Meta/Instagram, Mozilla/Firefox, BitTorrent/uTorrent, DivX/Tivo</p>
             <p>Porfirio is a seasoned Product Marketing Executive with a track record of driving growth and innovation in streaming media and digital content spaces. He is passionate about bridging the gap between product development and market success, leveraging data-driven strategies to connect with audiences.</p>
             <p>Outside of work, Porfirio is a Disaster Service Worker Volunteer with the NERT/SFFD. He is a retired, nationally ranked ballroom dance champion, who now enjoys beach time with family, and gravel cycling Bay Area trails.</p>
-            <p>He is currently available for Advisory and Consulting roles in areas he holds dear, including health &amp; wellness, streaming media, and new innovations in consumer experiences (including AR/VR and wearables).</p>
+            <p>He is currently available for Advisory and Consulting roles in areas he holds dear, like health &amp; wellness, streaming media, and new innovations in consumer experiences (including AR/VR and wearables).</p>
         </div>
     </div>
 
