--- a/tesla/index.html
+++ b/tesla/index.html
@@ -1,131 +1,277 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <title>Tesla Start Page by @porfitron</title>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99747601-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  gtag('config', 'UA-99747601-1');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99747601-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-99747601-1");
+    </script>
     <style>
-    body 
-    { 
-    font: 62.5%/1.5  "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sans-serif; 
-    //background: url(/images/wallpaper.png) repeat; 
-    color: #cfcfd1; 
-    background-color: #2a2a2e;    
-    text-align:center;
-    margin-bottom: 50px;
-    } 
+      body {
+        /* Increased base font for better legibility on a large screen */
+        font:
+          120%/1.5 "Lucida Grande",
+          "Lucida Sans",
+          Tahoma,
+          Verdana,
+          sans-serif;
+        color: #cfcfd1;
+        background-color: #2a2a2e;
+        text-align: center;
+        margin-bottom: 90px; /* Space for larger footer */
+      }
 
-    #wrapper 
-    {  
-    width:980px;  
-    text-align:left;   
-    margin-left:auto;  
-    margin-right:auto;  
-    //background-color: #38383d; 
-    }
-    
-    #footer {
-  background-color: #38383d;
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  height: 60px;
-  //border-top: solid 1px #cfcfd1;
-  margin-bottom: 0px;
-  padding-top:15px;
-  font-size: 14px;
-}
+      #wrapper {
+        /* Make the wrapper responsive (remove fixed 980px) */
+        width: 95%; /* Fluid width */
+        max-width: 1200px; /* Prevent it from stretching too wide */
+        text-align: left;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* Global styles for fluid images */
+      img {
+        max-width: 100%;
+        height: auto;
+        /* Ensure no image border for links, replacing deprecated border="0" */
+        border: none;
+      }
 
+      /* New 4-across layout for tiles using Flexbox */
+      .tile-grid {
+        display: flex;
+        flex-wrap: wrap; /* Allows items to wrap to the next line */
+        justify-content: space-between; /* Distribute space evenly */
+        padding: 20px 0;
+      }
+
+      .tile-link {
+        display: block;
+        /* Calculate width for 4 items with some margin in between */
+        width: 24%;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      /* Ensure the image inside the link scales to fill the allocated 24% width */
+      .tile-link img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+      }
+
+      /* Footer Styles */
+      #footer {
+        background-color: #38383d;
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        height: 70px; /* Increased height */
+        margin-bottom: 0px;
+        padding: 10px 0;
+        font-size: 1.6rem; /* Larger font size */
+        line-height: 1.5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* Force content onto a single line */
+        white-space: nowrap;
+      }
+
+      /* Make footer links better touch targets */
+      #footer a {
+        display: inline-block;
+        padding: 5px;
+        margin: 0 5px;
+      }
+
+      /* Style for the white text links in the footer */
+      .footer-text-link {
+        color: #fff;
+      }
+
+      /* Style for the Firefox logo alignment in the footer */
+      .footer-logo {
+        vertical-align: middle;
+      }
+
+      /* Header Styles */
+      .header-logo-container {
+        position: fixed;
+        top: 0px;
+        width: 100%;
+        height: 60px; /* Increased height */
+        text-align: left;
+        background-color: #2a2a2e;
+        z-index: 10;
+      }
+
+      /* Style for the Tesla logo image */
+      .header-logo-container img {
+        margin: 10px;
+        width: 100px;
+      }
+
+      /* Search Bar Styles */
+      .search-container {
+        border: solid 1px #cfcfd1;
+        padding: 10px;
+        background-color: #38383d;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+      }
+
+      /* Style for the search form */
+      .search-form {
+        display: flex;
+        width: 100%;
+      }
+
+      /* Style for the search input to be larger */
+      .search-input {
+        color: #cfcfd1;
+        background-color: #38383d;
+        border: 0;
+        flex-grow: 1;
+        font-size: 22px;
+        padding: 10px;
+      }
+
+      /* Style for the search button to be a better touch target */
+      .search-button {
+        color: #fff;
+        font-weight: bold;
+        border: 0;
+        font-size: 22px;
+        background-color: #38383d;
+        padding: 10px 20px;
+        cursor: pointer;
+      }
     </style>
-    
   </head>
-<body onload="getParamValuesByName();">
-<div style="position: fixed; top: 0px; width:100%; height: 50px; text-align:left;background-color: #2a2a2e;">
-<a href="https://tesla.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img style="margin:15px;" src="images/tesla-wordmark.png" width="10%" border="0" /></a>
-</div>
+  <body onload="getParamValuesByName();">
+    <div class="header-logo-container">
+      <a
+        href="https://tesla.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github">
+        <img src="images/tesla-wordmark.png" />
+      </a>
+    </div>
 
-<h1>&nbsp;</h1>
-<div id="wrapper">
+    <h1>&nbsp;</h1>
+    <div id="wrapper">
+      <div class="search-container">
+        <form method="get" action="http://www.google.com/search" class="search-form">
+          <input
+            type="text"
+            name="q"
+            size="25"
+            class="search-input"
+            maxlength="255"
+            value="Search the Web"
+            onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white';"
+            onblur="if(this.value=='')this.value=this.defaultValue; " />
+          <input type="submit" value="Go!" class="search-button" />
+        </form>
+      </div>
 
-<div style="border:solid 1px #cfcfd1; width:980px; padding:10px; text-align:center; background-color:#38383d;">
-<form method="get" action="http://www.google.com/search">
+      <div class="tile-grid">
+        <a
+          class="tile-link"
+          href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile-duckhuntjs.png"
+        /></a>
+        <a
+          class="tile-link"
+          href="https://www.abettertheater.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile_theater.png"
+        /></a>
+        <a
+          class="tile-link"
+          href="https://play.famobi.com/solitaire-legend/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile_solitairelegend.png"
+        /></a>
+        <a
+          class="tile-link"
+          href="https://play.famobi.com/archery-world-tour/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile_archery.png"
+        /></a>
 
-<input type="text" name="q" size="25" style="color:#cfcfd1; background-color:#38383d; border:0; width:900px; font-size:16px;" maxlength="255" value="Search the Web"
-onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white';" onblur="if(this.value=='')this.value=this.defaultValue; "/>
-<input type="submit" value="Go!" style="color:#fff; font-weight:bold; border:0; font-size:16px; background-color:#38383d;" />
+        <a
+          class="tile-link"
+          id="weather"
+          href="https://weather.com/weather/today/l/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile-weather.png"
+        /></a>
+        <a
+          class="tile-link"
+          href="http://www.kinetic.com/teslascreens/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile_kinetic.png"
+        /></a>
+        <a
+          class="tile-link"
+          href="http://teslarati.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile-teslarati.png"
+        /></a>
+        <a
+          class="tile-link"
+          href="https://news.google.com/search?q=tesla&utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+          ><img src="images/tile-teslanews.png"
+        /></a>
+      </div>
+    </div>
 
-</form>
-</div>
+    <div id="footer">
+      <a
+        href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github">
+        <img src="images/firefox-logo-glyph.png" height="40" width="40" class="footer-logo" /> </a
+      >&nbsp; If you like this start page, consider getting
+      <a
+        class="footer-text-link"
+        href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"
+        >Firefox</a
+      >
+      on your PC, Mac, Mobile or Fire TV. Page by
+      <a href="https://twitter.com/porfitron" class="footer-text-link">@porfitron</a>.
+    </div>
 
-<p>
-<a href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-duckhuntjs.png" border="0" style="padding:8px;" /></a> 
-<!-- <a href="https://play2048.co/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-2048.png" border="0" style="padding:8px;" /></a> -->
-<a href="https://www.abettertheater.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_theater.png" border="0" style="padding:8px;" /></a> 
-<a href="https://play.famobi.com/solitaire-legend/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_solitairelegend.png" border="0" style="padding:8px;" /></a> 
-<a href="https://play.famobi.com/archery-world-tour/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_archery.png" border="0" style="padding:8px;" /></a> 
-<a id="weather" href="https://weather.com/weather/today/l/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-weather.png" border="0" style="padding:8px;" /></a> 
-<a href="http://www.kinetic.com/teslascreens/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_kinetic.png" border="0" style="padding:8px;" /></a> 
-<a href="http://teslarati.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslarati.png" border="0" style="padding:8px;" /></a> 
-<a href="https://news.google.com/search?q=tesla&utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslanews.png" border="0" style="padding:8px;" /></a>
-</p>
+    <script type="text/javascript">
+      function getParamValuesByName(querystring) {
+        var qstring = window.location.href.slice(window.location.href.indexOf("?") + 1).split("&");
+        for (var i = 0; i < qstring.length; i++) {
+          var urlparam = qstring[i].split("=");
+          if (urlparam[0] == querystring) {
+            return urlparam[1];
+          }
+        }
+      }
 
-<p style="font-size:14px; font-weight:bold;">The latest on Twitter...</p>
+      var uid = getParamValuesByName("zip");
+      var uname = getParamValuesByName("uname");
+      //alert(uid);
 
-<div style="text-align:center;">
-<table width="100%" border="0" cellpadding="0" cellspacing="0" border="0" style="border:0;" cols="2">
-<tr>
-<td width="50%">
-<a class="twitter-timeline" data-width="480" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/Tesla?ref_src=twsrc%5Etfw">Tesla Motors</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-</td>
-<td width="50%">
-<a class="twitter-timeline" data-width="480" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/ElonMusk?ref_src=twsrc%5Etfw">Elon Musk</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-</td>
-</tr>
-</table>
-</div>
-
-</div>
-
-<div id="footer">
-  <a href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/firefox-logo-glyph.png" height="40" width="40" border="0" style="vertical-align:middle;" /></a>&nbsp;
-  If you like this start page, consider getting <a style="color:#fff;" href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github">Firefox</a> on your PC, Mac, Mobile or Fire TV. 
-  Page by <a href="https://twitter.com/porfitron" style="color:#fff;">@porfitron</a>.
-</div>
-
-<script type="text/javascript">
-function getParamValuesByName (querystring) {
-
-  var qstring = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-  for (var i = 0; i < qstring.length; i++) {
-    var urlparam = qstring[i].split('=');
-    if (urlparam[0] == querystring) {
-       return urlparam[1];
-    }
-  }
-}
-
-  var uid = getParamValuesByName('zip');
-var uname = getParamValuesByName('uname');
-//alert(uid);
-
-if (uid == null) {
-  document.getElementById('weather').href='https://weather.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github';
-
-} else {
-  document.getElementById('weather').href='https://weather.com/weather/today/l/'+uid+'?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github';
-
-}
-</script>
-
-
-</body>
+      if (uid == null) {
+        document.getElementById("weather").href =
+          "https://weather.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github";
+      } else {
+        document.getElementById("weather").href =
+          "https://weather.com/weather/today/l/" +
+          uid +
+          "?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github";
+      }
+    </script>
+  </body>
 </html>
